# cfl

./: CLAUDE.md  CMakeLists.txt  LIBRARY_REVIEW.md  README.md
ci/: README.md  debug.sh  install.sh  release.sh
include/cfl/: cfl.h  cfl_service.h
include/cfl/services/: cfl_service_danp.h
scripts/: new_module.sh
src/: cfl.c  cfl_service.c  cfl_shell.c
src/services/: cfl_service_danp.c
tests/: CMakeLists.txt  README.md  TEST_SUMMARY.md  setup_and_run.sh
tests/unit/: test_cfl_builders.c  test_cfl_crc.c  test_cfl_header.c  test_cfl_serialization.c  test_cfl_validation.c
zephyr/: CMakeLists.txt  Kconfig
